--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.54.0",
+    "ipykernel>=6.29.5",
+    "jupyterlab>=4.4.3",
+    "notebook>=7.4.3",
     "python-dotenv>=1.1.0",
 ]
